# Universal-PactPay-Blink-API

./: .env  .env.example  .gitignore  README.md  next.config.js  notes  package-lock.json  package.json  railway.toml  tailwind.config.js  tsconfig.tsbuildinfo
anchor-project/: Anchor.toml  Cargo.toml
anchor-project/programs/stakeguard/: Cargo.toml
anchor-project/programs/stakeguard/src/: lib.rs
api/: .env.example  package-lock.json  package.json  railway.toml  test-e2e.mjs  test-scenarios.mjs  tsconfig.tsbuildinfo
api/src/: middleware.ts
api/src/app/: layout.tsx  page.tsx
api/src/lib/: database.ts  types.ts
api/src/lib/auth/: verify.ts
api/src/lib/crypto/: termsHash.ts
api/src/lib/events/: dispatcher.ts  listener.ts
api/src/lib/providers/: custodial.ts  direct.ts  index.ts  types.ts
api/src/lib/solana/: custodial.ts  escrow.ts  idl.ts  pda.ts  transactions.ts
api/src/lib/stripe/: client.ts  deposits.ts  (+1 more)
blink-mcp-server/: README.md  package-lock.json  package.json
blink-mcp-server/src/: index.ts
contracts/: stakeguard.rs
docs/: connectwallet.tsx  escrowops.tsx  stakingContract.rs
docs/.PRD_DEVELOPMENT/: browser-tools-mcp
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/browse/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/join/: page.tsx
src/components/: AIChatSidebar.tsx
src/lib/: api.ts  database.ts  supabase.ts
src/lib/providers/: custodial.ts  types.ts
src/lib/solana/: escrow.ts  pda.ts  transactions.ts
src/providers/: WalletProvider.tsx
supabase/: schema.sql
(+32 files in other folders)
