[package]
name = "stakeguard"
version = "0.1.0"
description = "StakeGuard escrow program for Blink API"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stakeguard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
constant_time_eq = "=0.3.1"
